2011-04-11  Andreas Kupries  <andreask@activestate.com>

	* csv.man: [Bug 3281791]: Followup to fix for [Bug 3061815], fixed
	  forgotten change in the text after the examples. Thanks to
	  <guardus@users.sourceforge.net>.

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-09-08  Andreas Kupries  <andreask@activestate.com>

	* csv.man: [Bug 3061815]: Fixed a mixup in the examples which
	matched regular output to alternate format and vice versa. Thanks
	to Harald Oehlmann <oehhar@users.sourceforge.net>.

2010-01-19  Andreas Kupries  <andreask@activestate.com>

	* csv.tcl (::csv::read2queue): [Bug 2926387]: Fix use of wrong
	* csv.test: variable when handling multi-line fields reported by
	* csv.man: Jeff Rogers <dvrsn@users.sourceforge.net>. Extended
	* pkgIndex.tcl: testsuite. Bumped version to 0.7.2.
	* 2926387.csv: <New file>, for the new tests.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-09-17  Andreas Kupries  <andreask@activestate.com>

	* csv.man: [Bug 2860843]. Fixed two documentation typos reported
	  by Larry Virden <lvirden@users.sourceforge.net>

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-02  Andreas Kupries  <andreask@activestate.com>

	* csv.tcl: Fixed [SF Bug 2123513]. Added protections against
	* csv.man: malformed separator characters (empty or string) to the
	* csv.test: read2 and split2 commands. Extended test suite to
	* pkgIndex.tcl: cover these cases. Bumped the package version to
	  0.7.1.

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
