@@ -1,11 +1,11 @@
 [comment {-*- tcl -*-}]
-[manpage_begin csv n 0.7.2]
-[copyright {2002-2009 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[manpage_begin csv n 0.7.3]
+[copyright {2002-2011 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {CSV processing}]
 [titledesc {Procedures to handle CSV data.}]
 [category  {Text processing}]
 [require Tcl 8.3]
-[require csv [opt 0.7.2]]
+[require csv [opt 0.7.3]]
 [description]
 
 [para]
